--- a/ToDoList/ToDoList/Views/_ViewImports.cshtml
+++ b/ToDoList/ToDoList/Views/_ViewImports.cshtml
@@ -1,9 +1,6 @@
 ﻿@using ToDoList_Mvc_UI
 @using ToDo_Domain_Entities
+@using ToDoList_Mvc_UI.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ToDoList_Mvc_UI
-
-@{
-    Layout = "_Layout";
-}
