--- a/ToDoList/ToDoList/Views/Home/EditPage.cshtml
+++ b/ToDoList/ToDoList/Views/Home/EditPage.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    Layout = "_Layout";
+    ViewData["Title"] = "EditPage";
 }
 
 @model ToDoList
 
 <h1>Edit page</h1>
 
-    <form method="post" asp-action="UpdateItem" asp-controller="Home" class="editPanel">
+    <form method="post" asp-action="UpdateItem" asp-controller="Home" asp-route-userId="@User.Claims.FirstOrDefault().Value" class="editPanel">
         <div class="editPanel">
             <div class="namePanel">
                 <label asp-for="@Model.Name">Name: </label>
@@ -30,6 +30,7 @@
                 <input type="text" value="@Model.Description" class="descriptionField" asp-for="@Model.Description"/>
             </div>
             <input type="hidden"  value="@Model.Id" asp-for="@Model.Id"/>
+            <input type="hidden" asp-for="@Model.UserId" value="@User.Claims.FirstOrDefault().Value"/>
         </div>
 
         <button type="submit" class="editButton">Edit</button>
