--- a/ToDoList/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/ToDoList/Views/Shared/_Layout.cshtml
@@ -4,46 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='@Url.Content("~/css/homePage.css")' rel="stylesheet">
-    <link href='@Url.Content("~/css/editPage.css")' rel="stylesheet">
+    <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/css/editPage.css"/> 
+    <link rel="stylesheet" href="~/css/homePage.css"/>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <title>SportStore</title>
 </head>
 <body>
-    <header>
-        <p>to do list</p>
-    </header>
-    <main>
-        <div class="list">
-            @RenderBody()
+<header>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <a style="text-decoration: none;color: white" asp-controller="Home" asp-action="Index" asp-route-Id="@User.Claims.First().Value">to do list</a>
+        
+        <div id="logOut">
+            <a style="text-decoration: none;color: white" asp-controller="Home" asp-action="LogOut">Log out</a>
         </div>
-    </main>
-    <footer>
-        <hr>
-        <p>&copy 2023 - Kruglikov Vlad - Privacy</p>
-    </footer>
-<script>
-    $("isDoneButton").click(function () {
-      $(this).toggleClass("alreadyDoneButton");
-    }); 
-
-    window.onload = function() {
-        var show = localStorage.getItem('show');
-        if (show === 'true'){
-            document.getElementById('hiddenItemsList').style.display = 'flex';
-        }
     }
-
-    function hideDoneItem(obj){
-        if (document.getElementById('hiddenItemsList').style.display == "flex"){
-            document.getElementById('hiddenItemsList').style.display = "none";
-             localStorage.setItem('show', 'false');
-        }
-        else{
-            document.getElementById('hiddenItemsList').style.display = "flex";
-             localStorage.setItem('show', 'true');
-        }
+    else
+    {
+        <a style="text-decoration: none;color: white" asp-controller="Home" asp-action="Login">to do list</a>
     }
-</script>
+</header>
+<main>
+    <div class="list">
+        @RenderBody()
+    </div>
+</main>
+<footer>
+    <hr>
+    <p>&copy 2023 - Kruglikov Vlad</p>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
